update the BeSquidgy.template so that it uses the Theme module
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@328 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/Themes/BeSquidgy.template
+++ b/Themes/BeSquidgy.template
@@ -6,8 +6,8 @@
 <meta name="description" content="{{A description of the site}}" />
 <meta name="keywords" content="{{Some keywords that match the site}}" />
 [[Block::Site-Head]]
-<link rel="shortcut icon" href="[[Block::Themes-root]]BeSquidgy.ico" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="[[Block::Themes-root]]BeSquidgy.css"/>
+<link rel="shortcut icon" href="[[Block::Theme-root]]BeSquidgy.ico" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="[[Block::Theme-root]]BeSquidgy.css"/>
 </head>
 <body>
 <div id="top"></div>
