update the default template to use the correct menus call
git-svn-id: file:///media/Data/Repos/SquidgyCMS/trunk@373 2fba2af6-d892-294d-8f6b-3ba2989aa45f

--- a/Themes/BeSquidgy.template
+++ b/Themes/BeSquidgy.template
@@ -15,7 +15,7 @@
 <table id="main_tbl">
 	<tr>
 		<td id="left_cell" rowspan="2">
-			[[Block::Site-TOCLinks]]
+			[[Block::Menus-block::{Primary}]]
 			[[Block::Site-EditLogoutLinks]]
 		</td>
 		<td id="main_cell" colspan="2">
